:lipstick: fix horizontal scroll
attempt to get rid of horizontal scroll on homepage

--- a/styles.css
+++ b/styles.css
@@ -435,6 +435,7 @@ margin-top: 2rem;
     .home-container {
         display: grid;
         grid-template-columns: 50vw 50vw;
+        max-width: 100vw;
     }
 
     .intro-message {
